--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-css-gradient": "^0.4.0",
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-query": "^3.39.3",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
