--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.2",
     "react-native": "0.74.1",
     "react-native-css-gradient": "^0.4.0",
     "react-native-dotenv": "^3.4.11",
